kubernetes/apps/orangehrm/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orangehrm-db
  namespace: apps
spec:
  serviceName: orangehrm-db
  replicas: 1
  selector:
    matchLabels:
      app: orangehrm-db
  template:
    metadata:
      labels:
        app: orangehrm-db
    spec:
      enableServiceLinks: false
      containers:
        - name: mariadb
          image: mariadb:12.3.2
          ports:
            - containerPort: 3306
          args: ["--innodb-buffer-pool-size=128M", "--max-connections=20"]
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
          resources:
            limits:
              memory: 384Mi
          readinessProbe:
            exec:
              command: ["healthcheck.sh", "--connect", "--innodb_initialized"]
            initialDelaySeconds: 10
            periodSeconds: 15
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: orangehrm-db
  namespace: apps
spec:
  clusterIP: None
  selector:
    app: orangehrm-db
  ports:
    - port: 3306
