kubernetes/apps/orangehrm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: orangehrm
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "orangehrm.k8s.local"
  rules:
    - backendRefs:
        - name: orangehrm
          port: 80
